Fixing vercel url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Large Type Utility App">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://large-type-svelte-public.vercel.app/">
+    <meta property="og:url" content="https://large-type-svelte.vercel.app/">
     <meta property="og:description" content="Display &amp; share text in a large font directly from your browser or phone. Read phone numbers, passwords, IP addresses, etc from across the room.">
 
     <meta name="theme-color" content="#FFFFFF">
